--- a/css/style.css
+++ b/css/style.css
@@ -7,11 +7,18 @@
     
 }
 
-.barraNav{
+#navega{
     background-color: lightblue;
     border-radius: 20px;
     border-style: ridge;
     
+}
+
+#navega li{
+    display: inline-block;
+    border: 1px solid rgb(68, 163, 201);
+    border-radius: 6px;
+    padding: 10px 20px;
 }
 
 .pNav{
